clusters/kind-cilium/istio-system/02-telemetry-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: telemetry
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/gateway
  http:
  ## Jaeger
  - match:
    - uri:
        prefix: /istio/jaeger
    route:
    - destination:
        host: tracing
        port:
          number: 80

  ## Kiali
  - match:
    - uri:
        prefix: /istio/kiali
    route:
    - destination:
        host: kiali
        port:
          number: 20001

  ## Grafana
  - match:
    - uri:
        prefix: /istio/grafana
    route:
    - destination:
        host: grafana
        port:
          number: 3000

  ## Prometheus
  - match:
    - uri:
        prefix: /istio/prometheus
    route:
    - destination:
        host: prometheus
        port:
          number: 9090
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: grafana
  namespace: istio-system
spec:
  host: grafana
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kiali
  namespace: istio-system
spec:
  host: kiali
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: tracing
  namespace: istio-system
spec:
  host: tracing
  trafficPolicy:
    tls:
      mode: DISABLE
---
